# Medical-Assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/api/endpoints/: chat.py  upload.py
app/core/: config.py
app/services/: rag_pipeline.py  vectorstore.py
user/ui/: app.py
user/utils/: api.py
